--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -133,8 +133,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - name: Prepare generator
-        run: cd ../generator && yarn && yarn build && cd ../definition
+      - name: Upgrade generator
+        run: yarn upgrade @recognizebv/sc3000-generator
       - name: Install dependencies
         run: yarn
       - name: Build
@@ -161,10 +161,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - name: Link and prepare generator
-        run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+      - name: Upgrade generator
+        run: yarn upgrade @recognizebv/sc3000-generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition && rm -rf ./tmp/definition/node_modules
+        run: yarn upgrade @recognizebv/sc3000-definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -204,10 +204,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - name: Link and prepare generator
-        run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+      - name: Upgrade generator
+        run: yarn upgrade @recognizebv/sc3000-generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition && rm -rf ./tmp/definition/node_modules
+        run: yarn upgrade @recognizebv/sc3000-definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
@@ -243,10 +243,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - name: Link and prepare generator
-        run: cd ../generator && yarn && yarn build && cd ../cli && mkdir -p ./tmp && cp -r ../generator/ ./tmp/generator
+      - name: Upgrade generator
+        run: yarn upgrade @recognizebv/sc3000-generator
       - name: Link and prepare definition
-        run: cd ../definition && yarn && yarn build && cd ../cli && cp -r ../definition/ ./tmp/definition && rm -rf ./tmp/definition/node_modules
+        run: yarn upgrade @recognizebv/sc3000-definition
       - name: Install dependencies
         run: yarn
       - name: Write release version
