--- a/cli/package.json
+++ b/cli/package.json
@@ -23,8 +23,8 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.4.3",
     "@oclif/plugin-update": "^3.1.9",
-    "@recognizebv/sc3000-definition": "../definition",
-    "@recognizebv/sc3000-generator": "../generator",
+    "@recognizebv/sc3000-definition": "*",
+    "@recognizebv/sc3000-generator": "*",
     "chalk": "^4.1.2",
     "temp": "^0.9.4"
   },
