--- a/cli/package.json
+++ b/cli/package.json
@@ -34,6 +34,7 @@
     "@types/chai": "^4",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.18.20",
+    "@types/nunjucks": "^3.2.2",
     "@types/temp": "^0.9.1",
     "chai": "^4",
     "eslint": "^7.32.0",
