--- a/cli/package.json
+++ b/cli/package.json
@@ -19,34 +19,36 @@
   "dependencies": {
     "@azure/msal-common": "^13.2.0",
     "@azure/msal-node": "^1.18.0",
-    "@oclif/core": "^2",
-    "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.4.3",
-    "@oclif/plugin-update": "^3.1.9",
+    "@oclif/core": "^2.10.0",
+    "@oclif/plugin-help": "^5.2.14",
+    "@oclif/plugin-plugins": "^3.1.8",
+    "@oclif/plugin-update": "^3.1.28",
     "@recognizebv/sc3000-definition": "*",
     "@recognizebv/sc3000-generator": "*",
     "chalk": "^4.1.2",
     "temp": "^0.9.4"
   },
   "devDependencies": {
-    "@oclif/test": "^2.3.11",
-    "@tsconfig/node18": "^1.0.1",
-    "@types/chai": "^4",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.18.20",
-    "@types/nunjucks": "^3.2.2",
+    "@oclif/test": "^2.3.33",
+    "@tsconfig/node18": "^18.2.0",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.17.1",
+    "@types/nunjucks": "^3.2.3",
     "@types/temp": "^0.9.1",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
     "chai": "^4",
-    "eslint": "^7.32.0",
+    "eslint": "^8.45.0",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "eslint-plugin-unicorn": "^48.0.1",
     "mocha": "^9",
     "oclif": "^3",
-    "shx": "^0.3.3",
-    "sinon": "^15.0.3",
+    "shx": "^0.3.4",
+    "sinon": "^15.2.0",
     "ts-node": "^10.9.1",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "tslib": "^2.6.1",
+    "typescript": "^5.1.6"
   },
   "oclif": {
     "bin": "sc3000",
