--- a/definition/package.json
+++ b/definition/package.json
@@ -14,15 +14,17 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.17.0",
     "@types/sinon": "^10.0.15",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.45.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
-    "chai": "^4.3.7",
+    "eslint-plugin-unicorn": "^48.0.1",
     "mocha": "^10.2.0",
     "sinon": "^15.2.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "typescript": "^5.1.6",
-    "eslint": "^8.45.0"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@recognizebv/sc3000-generator": "*"
