--- a/generator/package.json
+++ b/generator/package.json
@@ -15,10 +15,12 @@
     "@types/node": "^18.17.0",
     "@types/nunjucks": "^3.2.3",
     "@types/sinon": "^10.0.15",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
     "chai": "^4.3.7",
     "eslint": "^8.45.0",
     "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "eslint-plugin-unicorn": "^48.0.1",
     "mocha": "^10.2.0",
     "sinon": "^15.2.0",
     "ts-node": "^10.9.1",
