--- a/cli/package.json
+++ b/cli/package.json
@@ -26,6 +26,7 @@
     "@recognizebv/sc3000-definition": "*",
     "@recognizebv/sc3000-generator": "*",
     "chalk": "^4.1.2",
+    "ora": "^5.4.1",
     "temp": "^0.9.4"
   },
   "devDependencies": {
